test/corpus/stmt.alter_table.txt
==================
stmt.alter_table
==================

ALTER TABLE schema.tbl RENAME TO tbl2;
ALTER TABLE tbl RENAME TO tbl2;
ALTER TABLE tbl RENAME col1 TO col2;
ALTER TABLE tbl RENAME COLUMN col1 TO col2;

---

(sql_stmt_list
 (sql_stmt (alter_table_stmt (ALTER) (TABLE) (identifier) (identifier) (RENAME) (TO) (identifier)))
 (sql_stmt (alter_table_stmt (ALTER) (TABLE) (identifier) (RENAME) (TO) (identifier)))
 (sql_stmt (alter_table_stmt (ALTER) (TABLE) (identifier) (RENAME) (identifier) (TO) (identifier)))
 (sql_stmt (alter_table_stmt (ALTER) (TABLE) (identifier) (RENAME) (COLUMN) (identifier) (TO) (identifier))))
