test/corpus/stmt.attach.txt
================================================================================
stmt.attach
================================================================================

ATTACH 'test.db2' AS dbname;

--------------------------------------------------------------------------------

(sql_stmt_list
  (sql_stmt
    (attach_stmt
      (ATTACH)
      (string_literal)
      (AS)
      (identifier))))
