test/corpus/stmt.commit.txt
================================================================================
stmt.commit
================================================================================

COMMIT;
END TRANSACTION;

--------------------------------------------------------------------------------

(sql_stmt_list
  (sql_stmt
    (commit_stmt
      (COMMIT)))
  (sql_stmt
    (commit_stmt
      (END)
      (TRANSACTION))))
