test/corpus/stmt.insert.txt
================================================================================
stmt.insert
================================================================================

INSERT             INTO a1 DEFAULT VALUES;
INSERT             INTO main.a1 DEFAULT VALUES;
INSERT OR ROLLBACK INTO main.a1 DEFAULT VALUES;
INSERT OR ROLLBACK INTO a1 DEFAULT VALUES;
INSERT OR ABORT    INTO main.a1 DEFAULT VALUES;
INSERT OR ABORT    INTO a1 DEFAULT VALUES;
INSERT OR REPLACE  INTO main.a1 DEFAULT VALUES;
INSERT OR REPLACE  INTO a1 DEFAULT VALUES;
INSERT OR FAIL     INTO main.a1 DEFAULT VALUES;
INSERT OR FAIL     INTO a1 DEFAULT VALUES;
INSERT OR FAIL     INTO main.a1 DEFAULT VALUES;
INSERT OR IGNORE   INTO a1 DEFAULT VALUES;
REPLACE            INTO a1 DEFAULT VALUES;
REPLACE            INTO main.a1 DEFAULT VALUES;
INSERT             INTO a1      VALUES(1, 2);
INSERT             INTO main.a1 VALUES(1, 2);
INSERT OR ROLLBACK INTO main.a1 VALUES(1, 2);
INSERT OR ROLLBACK INTO a1      VALUES(1, 2);
INSERT OR ABORT    INTO main.a1 VALUES(1, 2);
INSERT OR ABORT    INTO a1      VALUES(1, 2);
INSERT OR REPLACE  INTO main.a1 VALUES(1, 2);
INSERT OR REPLACE  INTO a1      VALUES(1, 2);
INSERT OR FAIL     INTO main.a1 VALUES(1, 2);
INSERT OR FAIL     INTO a1      VALUES(1, 2);
INSERT OR FAIL     INTO main.a1 VALUES(1, 2);
INSERT OR IGNORE   INTO a1      VALUES(1, 2);
REPLACE            INTO a1      VALUES(1, 2);
REPLACE            INTO main.a1 VALUES(1, 2);
INSERT             INTO a1      (b, a) VALUES(1, 2);
INSERT             INTO main.a1 (b, a) VALUES(1, 2);
INSERT OR ROLLBACK INTO main.a1 (b, a) VALUES(1, 2);
INSERT OR ROLLBACK INTO a1      (b, a) VALUES(1, 2);
INSERT OR ABORT    INTO main.a1 (b, a) VALUES(1, 2);
INSERT OR ABORT    INTO a1      (b, a) VALUES(1, 2);
INSERT OR REPLACE  INTO main.a1 (b, a) VALUES(1, 2);
INSERT OR REPLACE  INTO a1      (b, a) VALUES(1, 2);
INSERT OR FAIL     INTO main.a1 (b, a) VALUES(1, 2);
INSERT OR FAIL     INTO a1      (b, a) VALUES(1, 2);
INSERT OR FAIL     INTO main.a1 (b, a) VALUES(1, 2);
INSERT OR IGNORE   INTO a1      (b, a) VALUES(1, 2);
REPLACE            INTO a1      (b, a) VALUES(1, 2);
REPLACE            INTO main.a1 (b, a) VALUES(1, 2);
INSERT             INTO a1      SELECT c, b FROM a2;
INSERT             INTO main.a1 SELECT c, b FROM a2;
INSERT OR ROLLBACK INTO main.a1 SELECT c, b FROM a2;
INSERT OR ROLLBACK INTO a1      SELECT c, b FROM a2;
INSERT OR ABORT    INTO main.a1 SELECT c, b FROM a2;
INSERT OR ABORT    INTO a1      SELECT c, b FROM a2;
INSERT OR REPLACE  INTO main.a1 SELECT c, b FROM a2;
INSERT OR REPLACE  INTO a1      SELECT c, b FROM a2;
INSERT OR FAIL     INTO main.a1 SELECT c, b FROM a2;
INSERT OR FAIL     INTO a1      SELECT c, b FROM a2;
INSERT OR FAIL     INTO main.a1 SELECT c, b FROM a2;
INSERT OR IGNORE   INTO a1      SELECT c, b FROM a2;
REPLACE            INTO a1      SELECT c, b FROM a2;
REPLACE            INTO main.a1 SELECT c, b FROM a2;
INSERT             INTO a1      (b, a) SELECT c, b FROM a2;
INSERT             INTO main.a1 (b, a) SELECT c, b FROM a2;
INSERT OR ROLLBACK INTO main.a1 (b, a) SELECT c, b FROM a2;
INSERT OR ROLLBACK INTO a1      (b, a) SELECT c, b FROM a2;
INSERT OR ABORT    INTO main.a1 (b, a) SELECT c, b FROM a2;
INSERT OR ABORT    INTO a1      (b, a) SELECT c, b FROM a2;
INSERT OR REPLACE  INTO main.a1 (b, a) SELECT c, b FROM a2;
INSERT OR REPLACE  INTO a1      (b, a) SELECT c, b FROM a2;
INSERT OR FAIL     INTO main.a1 (b, a) SELECT c, b FROM a2;
INSERT OR FAIL     INTO a1      (b, a) SELECT c, b FROM a2;
INSERT OR FAIL     INTO main.a1 (b, a) SELECT c, b FROM a2;
INSERT OR IGNORE   INTO a1      (b, a) SELECT c, b FROM a2;
REPLACE            INTO a1      (b, a) SELECT c, b FROM a2;
REPLACE            INTO main.a1 (b, a) SELECT c, b FROM a2;
INSERT             INTO a1      (b, a) VALUES(1, 2),(3,4);
INSERT             INTO main.a1 (b, a) VALUES(1, 2),(3,4);
INSERT OR ROLLBACK INTO main.a1 (b, a) VALUES(1, 2),(3,4);
INSERT OR ROLLBACK INTO a1      (b, a) VALUES(1, 2),(3,4);
INSERT OR ABORT    INTO main.a1 (b, a) VALUES(1, 2),(3,4);
INSERT OR ABORT    INTO a1      (b, a) VALUES(1, 2),(3,4);
INSERT OR REPLACE  INTO main.a1 (b, a) VALUES(1, 2),(3,4);
INSERT OR REPLACE  INTO a1      (b, a) VALUES(1, 2),(3,4);
INSERT OR FAIL     INTO main.a1 (b, a) VALUES(1, 2),(3,4);
INSERT OR FAIL     INTO a1      (b, a) VALUES(1, 2),(3,4);
INSERT OR FAIL     INTO main.a1 (b, a) VALUES(1, 2),(3,4);
INSERT OR IGNORE   INTO a1      (b, a) VALUES(1, 2),(3,4);
REPLACE            INTO a1      (b, a) VALUES(1, 2),(3,4);
REPLACE            INTO main.a1 (b, a) VALUES(1, 2),(3,4);

--------------------------------------------------------------------------------

(sql_stmt_list
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (IGNORE)
      (INTO)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (DEFAULT)
      (VALUES)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (IGNORE)
      (INTO)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (IGNORE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (IGNORE)
      (INTO)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (IGNORE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (select_stmt
        (SELECT)
        (identifier)
        (identifier)
        (identifier))))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ROLLBACK)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (ABORT)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (FAIL)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (INSERT)
      (OR)
      (IGNORE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)))
  (sql_stmt
    (insert_stmt
      (REPLACE)
      (INTO)
      (identifier)
      (identifier)
      (identifier)
      (identifier)
      (VALUES)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal)
      (numeric_literal))))
