test/corpus/stmt.reindex.txt
==================
stmt.reindex
==================

REINDEX index;
REINDEX schema.index;

---

(sql_stmt_list
 (sql_stmt (reindex_stmt (REINDEX) (identifier)))
 (sql_stmt (reindex_stmt (REINDEX) (identifier) (identifier))))
