test/corpus/stmt.savepoint.txt
================================================================================
stmt.savepoint
================================================================================

SAVEPOINT point;

--------------------------------------------------------------------------------

(sql_stmt_list
  (sql_stmt
    (savepoint_stmt
      (SAVEPOINT)
      (identifier))))
